2001-02-13 17:30 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * harbour/source/rtl/idle.c
     * Changed Sleep(0) to Sleep(20) so that Harbour will properly release CPU on Win32.

2001-02-13 15:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * Warnings fixed;
     * handling of free pages pool implemented ( not tested yet )

2001-02-13 12:21 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/debugger.prg
     ! Trace support fixed

2001-02-13 11:30 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   * harbour/source/rtl/tget.prg
     + Minus support fixed

2001-02-13 13:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/include/hbrddntx.h
   * harbour/source/rdd/dbfntx/dbfntx1.c
     + ntxAppend() added;
     * updating of opened indexex while new record adding is implemented;
     * few fixes;
     * error now is generated while opening, if index file doesn't exist.

2001-02-12 21:58 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + more options implemented.

   * harbour/source/debug/debugger.prg
     + Method EditSet() and Trace() implemented.

2001-02-12 13:32 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + more options implemented.

   * harbour/source/debug/debugger.prg
     + Method Animate() added.
     (many thanks to Ignacio for the "happy ideas" :-)

2001-02-12 09:24 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + more options implemented.

   * harbour/source/debug/dbgtwin.prg
     + DATA lVisible added.

   * harbour/source/debug/debugger.prg
     + Methods Public(), Private(), Static(), Local(), All() and Sort() added
     (many thanks to Luiz for the suggested code).

2001-02-11 18:22 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * few bugs fixed, related to using ntx in shared mode